# SerialHashTable

./: CMakeLists.txt  README.org  SerialHashTableConfig.cmake.in
.github/workflow/: ubuntu-latest.yml
.github/workflows/: ubuntu-bionic.yml  ubuntu-latest.yml
cmake/: FindCriterion.cmake  LibFindMacros.cmake
src/: CMakeLists.txt  serial-hash-internal.h  serial-hash.c  serial-hash.h  serial-list.c  serial-list.h
tests/: CMakeLists.txt  test_serial_hash.c  test_serial_list.c
